@@ -1418,6 +1418,10 @@ Wed May 14 13:05:49 CEST 2003
 Fri May 16 11:45:50 CEST 2003
 
 	- Fixed include in pgtypeslib to not include c.h
+
+Fri May 16 13:32:10 CEST 2003
+
+	- Made double variables work again.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
